--- a/config.json
+++ b/config.json
@@ -5,10 +5,10 @@
 			"lang",
 			"long"
 		],
-		"set_size": 500,
-		"sequence_length": 50,
+		"set_size": 1000,
+		"sequence_length": 2,
 		"train_test_split": 0.85,
-		"normalise": false
+		"normalise": true
 	},
 	"training": {
 		"epochs": 2,
@@ -22,7 +22,7 @@
 			{
 				"type": "lstm",
 				"neurons": 100,
-				"input_timesteps": 49,
+				"input_timesteps": 1,
 				"input_dim": 2,
 				"return_seq": true
 			},
