--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ tensorflow-gpu==1.10.0
 keras==2.2.2
 matplotlib==2.2.2
 pyramid-arima==0.9.0
+google==2.0.2
+google-api-core==1.14.3
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-cloud-core==1.0.3
+google-cloud-storage==1.20.0
+google-pasta==0.1.7
+google-resumable-media==0.4.1
