--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
 {
 	"data": {
-		"filename": "go_track_trackspoints.csv",
+		"filename": "intro.csv",
 		"columns": [
 			"lang",
 			"long"
 		],
 		"set_size": 1000,
-		"sequence_length": 2,
-		"train_test_split": 0.85,
-		"normalise": true
+		"sequence_length": 50,
+		"train_test_split": 0.7,
+		"normalise": false
 	},
 	"training": {
-		"epochs": 2,
+		"epochs": 10,
 		"batch_size": 32
 	},
 	"model": {
@@ -22,7 +22,7 @@
 			{
 				"type": "lstm",
 				"neurons": 100,
-				"input_timesteps": 1,
+				"input_timesteps": 49,
 				"input_dim": 2,
 				"return_seq": true
 			},
