--- a/config.json
+++ b/config.json
@@ -1,18 +1,17 @@
 {
 	"data": {
-		"filename": "intro.csv",
+		"filename": "lang.csv",
 		"columns": [
-			"lang",
-			"long"
+			"lang"
 		],
-		"set_size": 1000,
-		"sequence_length": 50,
-		"train_test_split": 0.7,
+		"set_size": 5000,
+		"sequence_length": 21,
+		"train_test_split": 0.8,
 		"normalise": false
 	},
 	"training": {
-		"epochs": 10,
-		"batch_size": 32
+		"epochs": 14,
+		"batch_size": 36
 	},
 	"model": {
 		"loss": "mse",
@@ -21,9 +20,9 @@
 		"layers": [
 			{
 				"type": "lstm",
-				"neurons": 100,
-				"input_timesteps": 49,
-				"input_dim": 2,
+				"neurons": 200,
+				"input_timesteps": 20,
+				"input_dim": 1,
 				"return_seq": true
 			},
 			{
@@ -32,12 +31,12 @@
 			},
 			{
 				"type": "lstm",
-				"neurons": 100,
+				"neurons": 200,
 				"return_seq": true
 			},
 			{
 				"type": "lstm",
-				"neurons": 100,
+				"neurons": 200,
 				"return_seq": false
 			},
 			{
